# marktstammdatenregister

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bess_data.py  etl.py  export_bess.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pages.yml  refresh-pages-data.yml  smoke-test-pages.yml
docs/: styles.css
docs/data/: bess.geojson  bess.json  summary.json
site/: CNAME  app.js  index.html  styles.css
src/marktstammdatenregister/: __init__.py  build_static_site.py  data.py  etl.py  export_bess.py  paths.py  streamlit_app.py
