[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "marktstammdatenregister"
version = "0.1.0"
description = "MaStR Gesamtdatenexport → DuckDB ETL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "lxml>=5.0",
    "pandas>=2.2",
    "streamlit>=1.44",
    "tqdm>=4.0",
]

[project.scripts]
etl = "marktstammdatenregister.etl:main"
export-bess = "marktstammdatenregister.export_bess:main"
build-static-site = "marktstammdatenregister.build_static_site:main"

[tool.uv]
package = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
